# MoneyEarning

./: .eslintrc.cjs  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  GOAL_SPEC.md  NEXT_STAGE_SPEC.md  PROJECT_POSTMORTEM.md  package.json
alpha-test/: alpha-bug-triage.md  alpha-feedback-form.md  alpha-success-metrics.md  alpha-test-record.md  alpha-test-script.md  alpha-user-profile.md
backtest-validation/: backtest-correctness-audit.md  backtest-report-disclaimer.md  benchmark-against-known-cases.md  no-future-function-tests.md  strategy-template-risk-audit.md
compliance/: allowed-copywriting.md  feature-risk-classification.md  product-positioning-boundary.md  prohibited-copywriting.md  risk-disclaimer.md  securities-compliance-audit.md
crates/wasm-license/: Cargo.toml
crates/wasm-license/src/: lib.rs
distribution/: antivirus-false-positive-plan.md  first-run-experience.md  install-trust-audit.md  installer-user-guide.md  release-package-checklist.md  unsigned-windows-warning-guide.md
docs/: VERSIONING.md
landing/: QuantVault_0.7.0_x64_zh-CN.msi  QuantVault_0.7.2_x64_zh-CN.msi  index.html
license/: activation-code-generation-guide.md  anti-piracy-lite.md  license-failure-cases.md  license-user-guide.md  manual-delivery-sop.md  offline-license-flow.md
me-script/: dangerous-formula-audit.md  formula-error-message-guide.md  formula-parser-tests.md  sample-formula-library.md  tdx-compatibility-matrix.md
release/: changelog-v0.12.md  known-issues.md  performance-benchmark.md  regression-test-checklist.md  security-regression-checklist.md  (+2 more)
(+424 files in other folders)
