[workspace]
resolver = "2"
members = [
    "crates/wasm-core",
    "crates/wasm-indicators",
    "crates/wasm-pattern",
    "crates/wasm-scanner",
    "crates/wasm-backtest",
    "crates/wasm-distribution",
    "crates/wasm-profile",
    "crates/wasm-license",
    "crates/wasm-custom",
    "crates/wasm-factors",
    "packages/app/src-tauri",
]

[profile.release]
opt-level = "s"       # Optimize for size (good for desktop apps)
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization, slower compile
strip = "debuginfo"   # Strip debug symbols from binary
panic = "abort"       # Smaller binary, immediate abort on panic
